[feat #119] 블라인드 북 위젯 API 구현